fixed some layout issue in projects page

--- a/src/03_Pages/03_Work/Work.scss
+++ b/src/03_Pages/03_Work/Work.scss
@@ -1,9 +1,10 @@
 @import "../../04_Variables_And_StyleComponents/Variables/Fonts_And_Styles.scss";
 
-.projects {
-  height: 75vh;
-  position: relative;
+.main_work_container {
+  width: 100%;
+  height: fit-content;
   animation: home ease-in-out backwards 1.5s;
+
   & h1 {
     font-family: $font_bold;
     font-size: $font_xl_1;
@@ -11,6 +12,7 @@
     margin: auto;
     padding: 1rem;
   }
+
   & .resume_container {
     display: flex;
     justify-content: space-around;
@@ -25,26 +27,35 @@
       transform: translateY(10%);
     }
   }
-  & .pointer {
-    height: fit-content;
-    cursor: $pointer, pointer;
+  .projects {
+    display: grid;
+    width: 100%;
+    height: 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 50%));
+    justify-content: center;
     & .projectsdata {
-      height: 100%;
-      position: relative;
-      cursor: grab;
-      &:active {
-        cursor: grabbing;
-      }
+      margin: 0 1rem;
     }
   }
 }
-@media screen and (max-width: 768px) {
-  .projects {
+@media screen and (max-width: 1000px) {
+  .main_work_container {
     & h1 {
-      font-size: $font_md_5;
+      font-size: $font_lg_1;
     }
-    .pointer {
-      cursor: $default, default;
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(100%, 100%));
+    }
+  }
+}
+@media screen and (max-width: 400px) {
+  .main_work_container {
+    & h1 {
+      font-size: $font_lg_1;
+    }
+    .projects {
+      display: grid;
     }
   }
 }
